# rotor-capnp

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
examples/echo/: Cargo.toml  echo_client.rs  echo_server.rs  messages.capnp
src/: error.rs  lib.rs  protocol.rs  serialization.rs  stream.rs
